--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -1,13 +1,16 @@
 <?import javafx.geometry.Insets?>
         <?import javafx.scene.control.Button?>
         <?import javafx.scene.control.TextField?>
-        <?import javafx.scene.layout.AnchorPane?>
         <?import javafx.scene.layout.ColumnConstraints?>
         <?import javafx.scene.layout.GridPane?>
         <?import javafx.scene.layout.RowConstraints?>
         <?import javafx.scene.text.Font?>
 
+<?import java.net.URL?>
 <GridPane alignment="center" hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller">
+   <stylesheets>
+      <URL value="@digitron.css"/>
+   </stylesheets>
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
